--- a/src/main/webapp/form_purchase.html
+++ b/src/main/webapp/form_purchase.html
@@ -648,15 +648,15 @@
                 if (tds[4].innerText !== "") front_end_data += "classification="+tds[4].innerText+"&";
                 if (tds[5].innerText !== "") front_end_data += "price="+tds[5].innerText+"&";
                 if (tds[6].innerText !== "") front_end_data += "expiration_time="+tds[6].innerText+"&";
-                if (tds[7].innerText !== "") front_end_data += "lower_limit="+tds[7].innerText+"&";
-                if (tds[8].innerText !== "") front_end_data += "upper_limit="+tds[8].innerText+"&";
+                if (tds[7].innerText !== "") front_end_data += "upper_limit="+tds[7].innerText+"&";
+                if (tds[8].innerText !== "") front_end_data += "lower_limit="+tds[8].innerText+"&";
                 if (tds[9].innerText !== "") front_end_data += "notes="+tds[9].innerText+"&";
                 //front_end_data = front_end_data.substring(0, front_end_data.length-1);  //删除最后一个字符
-                console.log("front_end_data"+front_end_data)
+                //console.log("front_end_data"+front_end_data)
                 $.get("user/findOne", {}, function (data) {
                     // 获取当前登陆的用户id，写入前端待发送的数据
                     front_end_data += "requisition_user_id="+data.user_id;
-                    console.log("front_end_data="+front_end_data);
+                    //console.log("front_end_data="+front_end_data);
                     // 把前端数据传给后端
                     $.post("purchase/getOrderId", {order_id: temp_order_id}, function () {
                         $.post("purchase/UpdateItemsList", front_end_data, function (data) {
